--- a/assignments/a9.md
+++ b/assignments/a9.md
@@ -1,5 +1,12 @@
-## DPS923 MAP523 Assignment 8 - Core Data Fun  
+## DPS923 MAP523 Assignment 8 - Core Data Fun
+### App with Table View that has live updates from Core Data
+
 Assignment 8 enables you to perform common tasks (add, delete, search) in an app that uses a Core Data store. A table view controller will show live updates, based on user interaction.  
+<br>
+
+> This document is being edited.  
+> This notice will be removed when the edits are complete.  
+
 <br>
 
 ### Due date
@@ -51,23 +58,18 @@ First, run the app in the iOS Simulator, so that you know that it does successfu
 
 #### Task preview
 In the sections that follow, you will perform these tasks:  
-1. Model design  
-2. Controller for the list of friends  
-3. Controller for "add" task  
-4. Storyboard work  
+1. (more to come)  
 <br>
 
-### Design a Core Data model  
-Create a Friend entity with firstName and lastName.  
-<br>
+#### Design a Core Data model.  
 
-### Create a table view controller to manage the list of friends  
-The search button is similar to the template code, except you will need to set a new predicate on the frc.  
-<br>
-The predicate will find the search string as a case-insensitive and diacritic-insensitive substring in either the first or last name.  
-<br>
-Following that, to trigger the frc and the table view to reload with the search results, you will need this block of code:  
-<br>
+Create a Friend entity with firstName and lastName.
+
+#### Create a table view controller to manage the list of friends.  
+
+The search button is similar to the template code, except you will need to set a new predicate on the frc.<br>
+The predicate will find the search string as a case-insensitive and diacritic-insensitive substring in either the first or last name.<br>
+Following that, to trigger the frc and the table view to reload with the search results, you will need this block of code:
 
 ```swift
         do {
@@ -78,51 +80,48 @@ Following that, to trigger the frc and the table view to reload with the search 
         tableView.reloadData()
 ```
 
-If the search string is empty, show all friends.  
-<br>
+If the search string is empty, show all friends.
 
-### Create a controller to handle the "add" functionality  
+#### Create a controller to handle the "add" functionality.  
+
 You can do this either as:
 
-* navigation controller Show (a.k.a. Push) segue, or  
+* navigation controller Show (a.k.a. Push) segue, or
 * a Modal segue
 
-Your choice.  
+Your choice.
 
-The add dialog must have buttons for:  
+The add dialog must have buttons for:
 
-* adding the friend and returning to the list  
-* canceling the add and returning to the list  
+* adding the friend and returning to the list
+* canceling the add and returning to the list
 
-If you want to do a modal segue, the add and cancel button IBActions need to call:  
+If you want to do a modal segue, the add and cancel button IBActions need to call 
 
 ```swift
 self.dismiss(animated: true, completion: {})
 ```
 
-Make sure added friends are saved to the device.  
-<br>
+Make sure added friends are saved to disk.
 
-### Storyboard work:  
+#### Storyboard work:  
 Delete the existing detail scene.  
 
 Configure the list scene to work with the new table view controller.  
 
 Make and configure a new "add" scene, it will work with a toolbar button.  
-<br>
 
 ### Screenshots
-Include the following:  
-* Show the friends list with 3 or more rows  
-* adding a friend  
-* another screenshot of the friends list after performing the above add  
-* screenshot of searching for a substring, make sure the search demonstrates that you can search either the first or last name  
-* screenshot showing the friends list filtered by the above string  
 
-TIP: If you have a problem getting the search predicate to work for both first and last name searching, just hookup the last name for partial marks.  
+* Show the friends list with 3 or more rows
+* adding a friend
+* another screenshot of the friends list after performing the above add
+* screenshot of searching for a substring, make sure the search demonstrates that you can search either the first or last name
+* screenshot showing the friends list filtered by the above string. 
 
-TIP: Make sure deleting a row works, even though you don't need a screenshot of this. Working fully means that changes are saved to the device.  
-<br>
+TIP: If you have a problem getting the search predicate to work for both first and last name searching, just hookup the last name for partial marks.
+
+TIP: Make sure deleting a row works, even though you don't need a screenshot of this. Working fully means that changes are saved to disk.
 
 ### Submitting your work
 Follow these instructions to submit your work:  
